--- a/spam_detection.ipynb
+++ b/spam_detection.ipynb
@@ -911,10 +911,10 @@
    "id": "0b915fed",
    "metadata": {},
    "source": [
-    "Nel cluster 0 e 2 il 50% sono spam. <br>\n",
-    "Nel cluster 4 la maggior parte sono spam. <br>\n",
-    "Nel cluster 3 quasi non esistono spam. <br>\n",
-    "Nel cluster 1 meno della metà sono spam. <br>"
+    "In clusters 0 and 2, 50% are spam. <br>\n",
+    "In cluster 4 most are spam. <br>\n",
+    "In cluster 3 there is almost no spam. <br>\n",
+    "In cluster 1 less than half are spam. <br>"
    ]
   }
  ],
